--- a/Throw_fornt/app/src/main/res/layout/activity_home.xml
+++ b/Throw_fornt/app/src/main/res/layout/activity_home.xml
@@ -7,13 +7,13 @@
 
         <variable
             name="viewModel"
-            type="com.example.throw_fornt.feature.main.HomeViewModel" />
+            type="com.example.throw_fornt.feature.home.HomeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".feature.main.HomeActivity">
+        tools:context=".feature.home.HomeActivity">
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,6 +35,7 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bnv_bottom_tab"
+            onNavigationItemSelected="@{viewModel::setCurrentFragment}"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             app:itemActiveIndicatorStyle="@color/transparent"
