--- a/Throw_fornt/app/src/main/res/menu/home_navigation_items.xml
+++ b/Throw_fornt/app/src/main/res/menu/home_navigation_items.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_map"
+        android:id="@+id/menu_item_map"
         android:icon="@drawable/ic_map_24"
         android:title="@string/home_menu_map" />
     <item
-        android:id="@+id/action_mypage"
+        android:id="@+id/menu_item_mypage"
         android:icon="@drawable/ic_person_24"
         android:title="@string/home_menu_mypage" />
 </menu>
