feat: kakao map api 연동

--- a/Throw_fornt/app/src/main/res/layout/fragment_map.xml
+++ b/Throw_fornt/app/src/main/res/layout/fragment_map.xml
@@ -11,14 +11,11 @@
     </data>
 
     <FrameLayout
+        android:id="@+id/fl_map_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".feature.map.MapFragment">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="map" />
 
     </FrameLayout>
 
