feat: 현재 위치 추적 및 일정 범위 이동하면 카메라 이동하는 기능 구현

--- a/Throw_fornt/app/src/main/res/layout/fragment_map.xml
+++ b/Throw_fornt/app/src/main/res/layout/fragment_map.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -9,7 +10,7 @@
             type="com.example.throw_fornt.feature.map.MapViewModel" />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/fl_map_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,7 +19,16 @@
         <net.daum.mf.map.api.MapView
             android:id="@+id/map_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </FrameLayout>
+            android:layout_height="match_parent" />
+
+        <Button
+            android:id="@+id/btn_refresh_cur_position"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.refreshNearbyStores()}"
+            android:text="가게 재탐색"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
