--- a/Throw_fornt/app/src/main/res/layout/fragment_map.xml
+++ b/Throw_fornt/app/src/main/res/layout/fragment_map.xml
@@ -16,19 +16,48 @@
         android:layout_height="match_parent"
         tools:context=".feature.map.MapFragment">
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_begin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="12dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="12dp" />
+
         <net.daum.mf.map.api.MapView
             android:id="@+id/map_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <Button
-            android:id="@+id/btn_refresh_cur_position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/btn_move_camera_to_cur_position"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginBottom="20dp"
+            android:adjustViewBounds="true"
+            android:onClick="@{() -> viewModel.moveCameraToCurPosition()}"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_my_location_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/gl_begin" />
+
+        <ImageView
+            android:id="@+id/btn_refresh_nearby_stores"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginBottom="20dp"
+            android:adjustViewBounds="true"
             android:onClick="@{() -> viewModel.refreshNearbyStores()}"
-            android:text="가게 재탐색"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_refresh_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/gl_end" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
