--- a/Throw_fornt/app/src/main/res/layout/activity_store.xml
+++ b/Throw_fornt/app/src/main/res/layout/activity_store.xml
@@ -9,16 +9,19 @@
             type="com.example.throw_fornt.feature.store.StoreViewModel" />
     </data>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".feature.store.StoreActivity">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="가게관리"/>
-
-
-    </FrameLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/store_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            tools:listitem="@layout/list_view_item"/>
+    </LinearLayout>
 </layout>
