--- a/Throw_fornt/app/src/main/res/layout/fragment_map.xml
+++ b/Throw_fornt/app/src/main/res/layout/fragment_map.xml
@@ -49,6 +49,18 @@
             app:queryBackground="@null"
             app:queryHint="가게이름을 입력하세요" />
 
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/cg_trash_filter_chip_group"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="@id/gl_end"
+            app:layout_constraintStart_toStartOf="@id/gl_begin"
+            app:layout_constraintTop_toBottomOf="@id/sb_store_search_bar"
+            app:singleSelection="false">
+
+        </com.google.android.material.chip.ChipGroup>
+
         <ImageView
             android:id="@+id/btn_move_camera_to_cur_position"
             android:layout_width="32dp"
