--- a/Throw_fornt/app/src/main/res/values/colors.xml
+++ b/Throw_fornt/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
+    <color name="base_purple">#664FA2</color>
 </resources>
