--- a/Throw_fornt/app/src/main/res/layout/fragment_map_store_info.xml
+++ b/Throw_fornt/app/src/main/res/layout/fragment_map_store_info.xml
@@ -21,10 +21,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxHeight="600dp"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/item_map_store_info" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
