--- a/Throw_fornt/app/src/main/res/layout/fragment_map_store_info.xml
+++ b/Throw_fornt/app/src/main/res/layout/fragment_map_store_info.xml
@@ -16,17 +16,29 @@
         android:padding="12dp"
         tools:context=".feature.map.storeInfo.MapStoreInfoFragment">
 
+        <ImageView
+            android:id="@+id/iv_top_line"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_black_line_horizontal_73"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_store_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:maxHeight="600dp"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_top_line"
             tools:listitem="@layout/item_map_store_info" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
