--- a/Throw_fornt/app/src/main/res/layout/item_map_store_info.xml
+++ b/Throw_fornt/app/src/main/res/layout/item_map_store_info.xml
@@ -8,6 +8,14 @@
         <variable
             name="item"
             type="com.example.throw_fornt.models.MapStoreInfo" />
+
+        <variable
+            name="onCall"
+            type="kotlin.jvm.functions.Function1" />
+
+        <variable
+            name="onNavigate"
+            type="kotlin.jvm.functions.Function1" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +24,7 @@
 
         <ImageView
             android:id="@+id/iv_store_image"
-            imageUrl="http://www.bizhankook.com/upload/bk/article/202002/thumb/19402-44437-sampleM.jpg"
+            imageUrl="@{item.storeImageUrl}"
             android:layout_width="140dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="12dp"
@@ -27,26 +35,28 @@
 
         <TextView
             android:id="@+id/tv_store_name"
+            setTextOrEmpty="@{item.storeName}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
             android:maxLines="1"
             android:singleLine="true"
-            android:text="@{item.storeName}"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_store_image"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/iv_store_image"
             tools:text="가게 이름" />
 
         <TextView
             android:id="@+id/tv_store_detail_address"
+            setTextOrEmpty="@{item.storeName}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:maxLines="1"
             android:singleLine="true"
-            android:text="@{item.storeName}"
-            android:textSize="16sp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_store_name"
             app:layout_constraintTop_toBottomOf="@id/tv_store_name"
@@ -58,8 +68,10 @@
             android:layout_height="28dp"
             android:layout_marginTop="12dp"
             android:adjustViewBounds="true"
+            android:onClick="@{()->onCall.invoke(item)}"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_store_phone_28"
+            app:layout_constraintBottom_toTopOf="@id/tv_store_call"
             app:layout_constraintStart_toStartOf="@id/tv_store_detail_address"
             app:layout_constraintTop_toBottomOf="@id/tv_store_detail_address" />
 
@@ -72,6 +84,7 @@
             android:scaleType="centerCrop"
             android:text="@string/map_store_call_text"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/iv_store_image"
             app:layout_constraintEnd_toEndOf="@id/btn_store_call"
             app:layout_constraintStart_toStartOf="@id/btn_store_call"
             app:layout_constraintTop_toBottomOf="@id/btn_store_call" />
@@ -84,8 +97,10 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="12dp"
             android:adjustViewBounds="true"
+            android:onClick="@{()->onNavigate.invoke(item)}"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_store_navigator_28"
+            app:layout_constraintBottom_toTopOf="@id/tv_store_navigator"
             app:layout_constraintStart_toEndOf="@id/btn_store_call"
             app:layout_constraintTop_toBottomOf="@id/tv_store_detail_address" />
 
@@ -97,6 +112,7 @@
             android:scaleType="centerCrop"
             android:text="@string/map_store_navigator_text"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/iv_store_image"
             app:layout_constraintEnd_toEndOf="@id/btn_store_navigator"
             app:layout_constraintStart_toStartOf="@id/btn_store_navigator"
             app:layout_constraintTop_toBottomOf="@id/btn_store_navigator" />
