--- a/Throw_fornt/app/src/main/res/layout/activity_store.xml
+++ b/Throw_fornt/app/src/main/res/layout/activity_store.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.example.throw_fornt.feature.store.StoreViewModel" />
@@ -12,16 +13,52 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".feature.store.StoreActivity">
+        android:orientation="vertical">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/store_list"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginRight="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            tools:listitem="@layout/list_view_item"/>
+            android:layout_height="0dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="75dp"
+            android:layout_marginRight="20dp"
+            android:layout_weight="3"
+            tools:context=".feature.store.StoreActivity">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/store_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/list_view_item" />
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="bottom"
+            android:layout_weight="2"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <Button
+                    android:layout_width="60dp"
+                    android:layout_height="66dp"
+                    android:layout_gravity="end"
+                    android:layout_marginRight="25dp"
+                    android:text="+"
+                    android:textSize="20dp"
+                    android:onClick="@{()->viewModel.register()}"></Button>
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="bottom"
+                android:layout_weight="2"
+                android:background="#D9D9D9"></FrameLayout>
+        </LinearLayout>
     </LinearLayout>
 </layout>
