--- a/Throw_fornt/app/src/main/res/layout/list_view_item.xml
+++ b/Throw_fornt/app/src/main/res/layout/list_view_item.xml
@@ -2,10 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:layout_marginStart="10pt"
-    android:layout_marginTop="5pt"
-    android:layout_marginBottom="5pt"
-    android:layout_marginEnd="10pt"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:background="@drawable/list_view_style"
     android:orientation="vertical">
 
@@ -14,9 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="가게이름"
-        android:layout_marginTop="5pt"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="60dp"
-        android:textSize="11pt" />
+        android:textSize="22dp" />
     <TextView
         android:id="@+id/store_type"
         android:layout_width="match_parent"
@@ -24,5 +22,5 @@
         android:text="타입"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
-        android:textSize="8pt" />
+        android:textSize="16dp" />
 </LinearLayout>
