--- a/Throw_fornt/app/src/main/res/layout/activity_register.xml
+++ b/Throw_fornt/app/src/main/res/layout/activity_register.xml
@@ -25,7 +25,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -126,6 +125,7 @@
                             android:layout_marginHorizontal="10dp"
                             android:background="@drawable/edit_text_border"
                             android:hint="홍길동"
+                            android:text="@{viewModel.ceoEdit}"
                             android:padding="16dp"
                             android:textSize="18dp" />
                     </LinearLayout>
@@ -171,6 +171,8 @@
                             android:padding="16dp"
                             android:textSize="18dp"
                             android:layout_marginTop="15dp"
+                            android:onClick="@{()->viewModel.search()}"
+                            android:enabled="false"
                             android:layout_marginRight="20dp"/>
                         <EditText
                             android:id="@+id/address_edit2"
@@ -214,7 +216,6 @@
                     </FrameLayout>
                 </LinearLayout>
             </LinearLayout>
-
         </ScrollView>
 
         <FrameLayout
