--- a/Throw_fornt/app/src/main/res/layout/fragment_map.xml
+++ b/Throw_fornt/app/src/main/res/layout/fragment_map.xml
@@ -10,13 +10,84 @@
             type="com.example.throw_fornt.feature.map.MapViewModel" />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/fl_map_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".feature.map.MapFragment">
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_begin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="12dp" />
 
-    </FrameLayout>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="12dp" />
+
+        <net.daum.mf.map.api.MapView
+            android:id="@+id/map_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/sb_store_search_bar"
+            setOnQueryTextListener="@{viewModel.searchStores}"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/bg_white_radius"
+            app:iconifiedByDefault="false"
+            app:layout_constraintEnd_toEndOf="@id/gl_end"
+            app:layout_constraintStart_toStartOf="@id/gl_begin"
+            app:layout_constraintTop_toTopOf="parent"
+            app:queryBackground="@null"
+            app:queryHint="가게이름을 입력하세요" />
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/cg_trash_filter_chip_group"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="@id/gl_end"
+            app:layout_constraintStart_toStartOf="@id/gl_begin"
+            app:layout_constraintTop_toBottomOf="@id/sb_store_search_bar"
+            app:singleSelection="false">
+
+        </com.google.android.material.chip.ChipGroup>
+
+        <ImageView
+            android:id="@+id/btn_move_camera_to_cur_position"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginBottom="20dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/bg_white_and_black_radius"
+            android:onClick="@{() -> viewModel.moveCameraToCurPosition()}"
+            android:scaleType="centerCrop"
+            android:padding="4dp"
+            android:src="@drawable/ic_my_location_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/gl_begin" />
+
+        <ImageView
+            android:id="@+id/btn_refresh_nearby_stores"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginBottom="20dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/bg_white_and_black_radius"
+            android:onClick="@{() -> viewModel.refreshNearbyStores()}"
+            android:scaleType="centerCrop"
+            android:padding="4dp"
+            android:src="@drawable/ic_refresh_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/gl_end" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
