--- a/Throw_fornt/app/src/main/res/layout/activity_register.xml
+++ b/Throw_fornt/app/src/main/res/layout/activity_register.xml
@@ -101,7 +101,6 @@
                             android:padding="16dp"
                             android:textSize="18dp" />
                     </LinearLayout>
-
                     <LinearLayout
                         android:id="@+id/ceo_information"
                         android:layout_width="match_parent"
@@ -126,6 +125,33 @@
                             android:background="@drawable/edit_text_border"
                             android:hint="홍길동"
                             android:text="@{viewModel.ceoEdit}"
+                            android:padding="16dp"
+                            android:textSize="18dp" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/number_information"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/number_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="전화번호"
+                            android:textSize="15dp"
+                            android:textStyle="bold" />
+
+                        <EditText
+                            android:id="@+id/number_edit"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="10dp"
+                            android:background="@drawable/edit_text_border"
+                            android:hint="02-1111-1111"
+                            android:text=""
                             android:padding="16dp"
                             android:textSize="18dp" />
                     </LinearLayout>
@@ -167,26 +193,30 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/edit_text_border"
-                            android:hint="서울특별시 중구 세종대로 110"
+                            android:hint="서울특별시 동작구 상도로 378"
                             android:padding="16dp"
                             android:textSize="18dp"
                             android:layout_marginTop="15dp"
                             android:onClick="@{()->viewModel.search()}"
-                            android:enabled="false"
+                            android:enabled="true"
                             android:layout_marginRight="20dp"/>
+
                         <EditText
                             android:id="@+id/address_edit2"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/edit_text_border"
-                            android:hint="서울 시청(1층)"
-                            android:padding="16dp"
-                            android:textSize="18dp"
+                            android:layout_height="match_parent"
                             android:layout_marginTop="10dp"
-                            android:layout_marginRight="20dp"/>
+                            android:layout_marginRight="20dp"
+                            android:background="@drawable/edit_text_border_enabled"
+                            android:enabled="false"
+                            android:hint="우편 번호"
+                            android:textColor="#8B8B8B"
+                            android:padding="16dp"
+                            android:textColorHint="#8B8B8B"
+                            android:textSize="18dp" />
                     </LinearLayout>
 
-                    <FrameLayout
+                    <!--<FrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="40dp">
@@ -213,7 +243,7 @@
                                 android:textSize="15dp"
                                 android:textStyle="bold" />
                         </LinearLayout>
-                    </FrameLayout>
+                    </FrameLayout>!-->
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
