--- a/Throw_fornt/app/src/main/res/layout/activity_store.xml
+++ b/Throw_fornt/app/src/main/res/layout/activity_store.xml
@@ -43,14 +43,22 @@
                 android:layout_height="0dp"
                 android:layout_weight="1">
 
-                <Button
-                    android:layout_width="60dp"
-                    android:layout_height="66dp"
-                    android:layout_gravity="end"
-                    android:layout_marginRight="25dp"
-                    android:text="+"
-                    android:textSize="20dp"
-                    android:onClick="@{()->viewModel.register()}"></Button>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical">
+
+                    <Button
+                        android:id="@+id/btn_register"
+                        android:layout_width="60dp"
+                        android:layout_height="66dp"
+                        android:layout_gravity="end"
+
+                        android:layout_marginRight="25dp"
+                        android:onClick="@{()->viewModel.register()}"
+                        android:text="+"
+                        android:textSize="20dp"/>
+                </FrameLayout>
             </FrameLayout>
 
             <FrameLayout
@@ -58,7 +66,29 @@
                 android:layout_height="0dp"
                 android:layout_gravity="bottom"
                 android:layout_weight="2"
-                android:background="#D9D9D9"></FrameLayout>
+                android:background="#D9D9D9">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textSize="18dp"
+                        android:text="* 수정 및 삭제를 원하시면\n   해당 가게를 눌러주세요"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:textStyle="bold"
+                        android:textSize="18dp"
+                        android:text="* 가게 등록은 &#34;+&#34;버튼을 눌러주세요"/>
+                </LinearLayout>
+            </FrameLayout>
         </LinearLayout>
     </LinearLayout>
 </layout>
