--- a/Throw_fornt/app/src/main/res/layout/activity_register.xml
+++ b/Throw_fornt/app/src/main/res/layout/activity_register.xml
@@ -101,33 +101,7 @@
                             android:padding="16dp"
                             android:textSize="18dp" />
                     </LinearLayout>
-                    <!--<LinearLayout
-                        android:id="@+id/ceo_information"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/ceo_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="대표자명"
-                            android:textSize="15dp"
-                            android:textStyle="bold" />
-
-                        <EditText
-                            android:id="@+id/ceo_edit"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="10dp"
-                            android:background="@drawable/edit_text_border"
-                            android:hint="홍길동"
-                            android:text="@={viewModel.ceoEdit}"
-                            android:padding="16dp"
-                            android:textSize="18dp" />
-                    </LinearLayout>!-->
                     <LinearLayout
                         android:id="@+id/number_information"
                         android:layout_width="match_parent"
@@ -228,11 +202,11 @@
                             android:textColorHint="#8B8B8B"
                             android:textSize="18dp"/>
                     </LinearLayout>
-
-                    <!--<FrameLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="40dp">
+                        android:layout_marginTop="40dp"
+                        android:orientation="vertical">
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -256,7 +230,67 @@
                                 android:textSize="15dp"
                                 android:textStyle="bold" />
                         </LinearLayout>
-                    </FrameLayout>!-->
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_marginRight="20dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_marginTop="5dp">
+                                <CheckBox
+                                    android:id="@+id/general"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="일반 쓰레기"
+                                    android:textSize="18dp"
+                                    android:checked="@={viewModel.general}"/>
+                                <CheckBox
+                                    android:id="@+id/bottle"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="병           "
+                                    android:textSize="18dp"
+                                    android:layout_marginLeft="10dp"
+                                    android:checked="@={viewModel.bottle}"/>
+                                <CheckBox
+                                    android:id="@+id/plastic"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="플라스틱"
+                                    android:textSize="18dp"
+                                    android:layout_marginLeft="10dp"
+                                    android:checked="@={viewModel.plastic}"/>
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+                                <CheckBox
+                                    android:id="@+id/paper"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="종이           "
+                                    android:textSize="18dp"
+                                    android:checked="@={viewModel.paper}"/>
+                                <CheckBox
+                                    android:id="@+id/can"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="캔           "
+                                    android:textSize="18dp"
+                                    android:layout_marginLeft="11dp"
+                                    android:checked="@={viewModel.can}"/>
+
+                            </LinearLayout>
+                        </LinearLayout>
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
