--- a/Throw_fornt/app/src/main/res/layout/item_map_store_info.xml
+++ b/Throw_fornt/app/src/main/res/layout/item_map_store_info.xml
@@ -50,7 +50,7 @@
 
         <TextView
             android:id="@+id/tv_store_detail_address"
-            setTextOrEmpty="@{item.storeName}"
+            setTextOrEmpty="@{item.storeFullAddress}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
