feat: 맵 서버 연동

--- a/Throw_fornt/app/src/main/res/xml/network_security_config.xml
+++ b/Throw_fornt/app/src/main/res/xml/network_security_config.xml
@@ -14,5 +14,6 @@
     </domain-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">maps.daum-img.net</domain>
+        <domain includeSubdomains="true">bizhankook.com</domain>
     </domain-config>
 </network-security-config>
